--- a/data/rules.yml
+++ b/data/rules.yml
@@ -24,3 +24,8 @@ rules:
     - action: action_cheer_up
     - action: utter_did_that_help
 
+- rule: Handle fallback
+  steps:
+  - intent: nlu_fallback
+  - action: utter_default
+
